# nes-emulator

./: .clang-format  .gitignore  CMakeLists.txt  nestest-log-compare.py
cmake/: CompilerWarnings.cmake
src/: CMakeLists.txt  cartridge.cpp  cartridge.h  cpu.cpp  cpu.h  log.h  main.cpp  memory.cpp  memory.h  opcodes.h
tests/: CMakeLists.txt  adc_tests.cpp  and_tests.cpp  arithmetic_instruction_tests.cpp  asl_tests.cpp  bcc_tests.cpp  bcs_tests.cpp  beq_tests.cpp  bit_tests.cpp  bne_tests.cpp  branch_instruction_tests.cpp  flag_instruction_tests.cpp  lda_tests.cpp  ldx_tests.cpp  ldy_tests.cpp  load_instruction_tests.cpp  logic_instruction_tests.cpp  memory_tests.cpp  stack_instruction_tests.cpp  test.cpp  transfer_instruction_tests.cpp
